--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <style>
+      
+    </style>
 
     <!-- Pico.css -->
     <link
@@ -59,19 +62,11 @@
       <div class="mountains" id="mountains-container">
         <img src="images/CDome-StoryImage.jpg" alt="" />
         <h2>Mountains</h2>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci,
-          suscipit.
-        </p>
       </div>
 
       <div class="national-park" id="nationalPark-container">
         <img src="images/Cannon-StoryImg_2.jpg" alt="" />
         <h2>National Park</h2>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci,
-          suscipit.
-        </p>
       </div>
     </div>
 
