--- a/mountains.html
+++ b/mountains.html
@@ -6,9 +6,7 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <!-- Pico.css -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css" />
 
     <title>Outdoor Adventure</title>
   </head>
@@ -34,10 +32,10 @@
           <select id="mountainList">
             <option value="">Select...</option>
           </select>
+          <div id="mountainDetails"></div>
         </form>
       </main>
     </div>
-    <div id="mountainDetails"></div>
 
     <footer>
       <p>&copy; Outdoor Adventure 2023</p>
