--- a/national-park.html
+++ b/national-park.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css" />
     <title>Outdoor Adventure</title>
   </head>
   <body>
@@ -46,12 +44,13 @@
               <option value="">Select...</option>
             </select>
           </div>
+
+          <div id="parkTable"></div>
+          <div id="parkList"></div>
         </form>
       </main>
 
       <!-- Add this div where you want the park information table to appear -->
-      <div id="parkTable"></div>
-      <div id="parkList"></div>
     </div>
 
     <footer>
